--- a/templates/component/navbar.html.twig
+++ b/templates/component/navbar.html.twig
@@ -4,6 +4,10 @@
 	</button>
 	<div class="collapse navbar-collapse" id="navbarNav">
 		<ul class="navbar-nav">
+			<li class="nav-item">
+				<a class="nav-link" href="{{ path('home')}}">Home</a>
+			</li>
+
 			{% if app.user %}
 				<li class="nav-item active">
 					<a class="nav-link" href="#">Mon profil</a>
