commit de jeudi/vendredi/lundi

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,9 @@
 body {
     background-color: lightgray;
 }
+
+img{
+    object-fit: cover !important;
+    object-position: top left;
+    height: 300px;
+}
