--- a/templates/annonce/show.html.twig
+++ b/templates/annonce/show.html.twig
@@ -17,7 +17,7 @@
             </tr>
             <tr>
                 <th>Description</th>
-                <td>{{ annonce.description }}</td>
+                <td>{{ annonce.description|raw }}</td>
             </tr>
             <tr>
                 <th>Model</th>
