--- a/templates/component/navbar.html.twig
+++ b/templates/component/navbar.html.twig
@@ -10,7 +10,10 @@
 
 			{% if app.user %}
 				<li class="nav-item active">
-					<a class="nav-link" href="#">Mon profil</a>
+					<a class="nav-link" href="{{ path('app_profil') }}">Mon profil</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="{{ path('app_logout') }}">Se déconnecter</a>
 				</li>
 			{% else %}
 				<li class="nav-item active">
